# llm-circuit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: the-pattern.md
examples/claude-code/: README.md
llm_circuit/: __init__.py  circuit.py  cli.py  config.py  health.py  proxy.py  router.py
tests/: test_circuit.py
